app/_scss/partials/_post.scss
//-----
// Post Styles
//-----

.post{
  width: 100%;
  margin: 0 auto;
  margin-bottom: 1rem;

  p,
  h1,
  h2,
  h3,
  h4,
  h5,
  h6{
    padding-top: 1rem;
    margin: 0 auto;
    width: 90%;

    @include breakpoint($medium-screen){
      width: 80%;
    }

    @include breakpoint($large-screen){
      width: 60%;
    }
  }

  img{
    display: table;
    margin: 1.6rem auto .6rem auto;
  }
}

